refactor: .toList()로 변환 작업