@@ -7,7 +7,6 @@ import com.programmers.springweekly.dto.wallet.response.WalletsResponse;
 import com.programmers.springweekly.repository.wallet.WalletRepository;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -34,7 +33,7 @@ public class WalletService {
     public WalletsResponse findByVoucherId(UUID voucherId) {
         List<Wallet> walletList = walletRepository.findByVoucherId(voucherId);
 
-        return new WalletsResponse(walletList.stream().map(WalletResponse::new).collect(Collectors.toList()));
+        return new WalletsResponse(walletList.stream().map(WalletResponse::new).toList());
     }
 
     public void deleteByWalletId(UUID walletId) {
@@ -44,6 +43,6 @@ public class WalletService {
     public WalletsResponse findAll() {
         List<Wallet> walletList = walletRepository.findAll();
 
-        return new WalletsResponse(walletList.stream().map(WalletResponse::new).collect(Collectors.toList()));
+        return new WalletsResponse(walletList.stream().map(WalletResponse::new).toList());
     }
 }
